@startuml
'https://plantuml.com/class-diagram

hide circle

abstract class Goal{
    timeSpan:TimeSpan
    getTimeSpan():TimeSpan
    checkData(date: LocalDate, timeSpan: TimeSpan): boolean
    {abstract} isAcheived(data:Data): boolean

}

class DietGoal{
    nutrient: String
    targetValue: int
    updateCurrentValue(data:Data): int
    getPastDates(date:LocalDate, timeSpan: TimeSpan): ArrayList<LocalDate>
    isAcheived(data:Data): boolean
}

class DietGoalList{
    unparse(dietGoal: DietGoal): String
    parse(s: String): DietGoal

}


Goal <|-- DietGoal
DietGoalList -- "*" DietGoal :contains >


@enduml